<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name_app"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dibuat"
        android:id="@+id/textView3"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelName"
        android:id="@+id/textView4"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelNim"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelJurusan"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:id="@+id/textView6"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelFakultas"
        android:id="@+id/textView7"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelUniv"
        android:id="@+id/textView8"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelEmail"
        android:id="@+id/textView9"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />
    

</RelativeLayout>
