<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/n"
        android:id="@+id/textN"
        android:textColor="#FFFFFF"
        android:layout_weight="0.87"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/editN"
        android:layout_weight="0.87" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sigmaY"
        android:textColor="#FFFFFF"
        android:id="@+id/textSigmaY"
        android:layout_weight="0.87"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/editSigmaY"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.87" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sigmaXY"
        android:textColor="#FFFFFF"
        android:id="@+id/textSigmaXY"
        android:layout_weight="0.87"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/editSigmaXY"
        android:layout_weight="0.87" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sigmaX2"
        android:textColor="#FFFFFF"
        android:id="@+id/textSigmaX2"
        android:layout_weight="0.87"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/editSigmaX2"
        android:layout_weight="0.87" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/X"
        android:textColor="#FFFFFF"
        android:id="@+id/textX"
        android:layout_weight="0.87"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/editX"
        android:layout_weight="0.87" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasilramal"
        android:id="@+id/buttonHitung"
        android:layout_weight="0.87" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hasil"
        android:textColor="#FFFFFF"
        android:id="@+id/textHasil"
        android:layout_weight="0.87"
        android:textStyle="bold" />

</LinearLayout>
