<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent" >
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulai"
        android:id="@+id/buttonMulai"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:textColor="#FFFFFF"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/buttonPeramalan"
        android:layout_alignEnd="@+id/buttonPeramalan"
        android:layout_alignLeft="@+id/buttonPeramalan"
        android:layout_alignStart="@+id/buttonPeramalan" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/buttonPeramalan"
        android:layout_above="@+id/buttonMulai"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petunjuk"
        android:textColor="#FFFFFF"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/buttonPetunjuk"
        android:layout_below="@+id/buttonMulai"
        android:layout_alignRight="@+id/buttonMulai"
        android:layout_alignEnd="@+id/buttonMulai"
        android:layout_alignLeft="@+id/buttonMulai"
        android:layout_alignStart="@+id/buttonMulai" />

    <Button
        android:id="@+id/buttonTentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonMulai"
        android:layout_alignLeft="@+id/buttonMulai"
        android:layout_alignStart="@+id/buttonMulai"
        android:layout_below="@+id/buttonMulai"
        android:layout_marginTop="56dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/tentang"
        android:textColor="#FFFFFF" />

</RelativeLayout>
